limpieza y organización, buenas prácticas y depuración de errores en los filtros